data ingestion completed

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -171,37 +171,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-18 18:19:16,189: INFO: common: yaml file: <_io.TextIOWrapper name='config/config.yaml' mode='r' encoding='UTF-8'> loaded successfuly]\n",
-      "[2023-07-18 18:19:16,191: INFO: common: yaml file: <_io.TextIOWrapper name='params.yaml' mode='r' encoding='UTF-8'> loaded successfuly]\n",
-      "[2023-07-18 18:19:16,191: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-18 18:19:16,192: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-07-18 18:19:19,160: INFO: 3996140745: filename artifacts/data_ingestion/data.zip downloaded! with following info: \n",
-      " Connection: close\n",
-      "Content-Length: 11616915\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: application/zip\n",
-      "ETag: \"adf745abc03891fe493c3be264ec012691fe3fa21d861f35a27edbe6d86a76b1\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: F2C8:AE0B:1EF2FF:1FCD64:64B6BB83\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Tue, 18 Jul 2023 16:19:18 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-par-lfpg1960045-PAR\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1689697157.546730,VS0,VE2193\n",
-      "Vary: Authorization,Accept-Encoding,Origin\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 8b9c1ec48781fed6ea0a766950677803a80c4339\n",
-      "Expires: Tue, 18 Jul 2023 16:24:18 GMT\n",
-      "Source-Age: 2\n",
-      "\n",
-      "]\n",
+      "[2023-07-20 11:59:05,420: INFO: common: yaml file: <_io.TextIOWrapper name='config/config.yaml' mode='r' encoding='UTF-8'> loaded successfuly]\n",
+      "[2023-07-20 11:59:05,422: INFO: common: yaml file: <_io.TextIOWrapper name='params.yaml' mode='r' encoding='UTF-8'> loaded successfuly]\n",
+      "[2023-07-20 11:59:05,422: INFO: common: created directory at: artifacts]\n",
+      "[2023-07-20 11:59:05,423: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-07-20 11:59:05,423: INFO: 3996140745: File already exists of size: ~ 11345 KB]\n",
       "Attempting to open file at artifacts/data_ingestion/data.zip\n",
       "Successfully opened zip file\n"
      ]
